// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<BoolButton /> > it renders ChoiceButton with default props 1`] = `
<DocumentFragment>
  <div
    class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal MuiToggleButtonGroup-fullWidth css-4ybkxl-MuiToggleButtonGroup-root"
    role="group"
  >
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-fullWidth MuiToggleButton-sizeMedium MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1269rce-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="0"
    >
      Item 1
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-fullWidth MuiToggleButton-sizeMedium MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1269rce-MuiButtonBase-root-MuiToggleButton-root"
      tabindex="0"
      type="button"
      value="1"
    >
      Item 2
    </button>
  </div>
</DocumentFragment>
`;

exports[`<BoolButton /> > pass props to widget 1`] = `
<DocumentFragment>
  <div
    class="MuiToggleButtonGroup-root MuiToggleButtonGroup-vertical MuiToggleButtonGroup-fullWidth css-pqsrz6-MuiToggleButtonGroup-root"
    role="group"
  >
    <button
      aria-pressed="true"
      class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-disabled MuiToggleButton-root Mui-selected Mui-disabled MuiToggleButton-fullWidth MuiToggleButton-sizeMedium MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-tzwn7e-MuiButtonBase-root-MuiToggleButton-root"
      disabled=""
      tabindex="-1"
      type="button"
      value="0"
    >
      Choice
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-fullWidth MuiToggleButton-sizeMedium MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-tzwn7e-MuiButtonBase-root-MuiToggleButton-root"
      disabled=""
      tabindex="-1"
      type="button"
      value="1"
    >
      Option
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-fullWidth MuiToggleButton-sizeMedium MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-tzwn7e-MuiButtonBase-root-MuiToggleButton-root"
      disabled=""
      tabindex="-1"
      type="button"
      value="2"
    >
      Setting
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-fullWidth MuiToggleButton-sizeMedium MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-tzwn7e-MuiButtonBase-root-MuiToggleButton-root"
      disabled=""
      tabindex="-1"
      type="button"
      value="3"
    >
      Custom
    </button>
  </div>
</DocumentFragment>
`;
